# app/models/accounts_payable.rb
@@ -1,0 +1,7 @@
+# frozen_string_literal: true
+
+class AccountsPayable < ApplicationRecord
+  belongs_to :category
+
+  validates :description, :due_date, :amount, presence: true
+end
