# db/schema.rb
@@ -10,10 +10,20 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2022_04_28_185615) do
+ActiveRecord::Schema.define(version: 2022_04_29_164108) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
+
+  create_table "accounts_payables", force: :cascade do |t|
+    t.money "amount", scale: 2
+    t.date "due_date"
+    t.string "description"
+    t.bigint "category_id", null: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["category_id"], name: "index_accounts_payables_on_category_id"
+  end
 
   create_table "categories", force: :cascade do |t|
     t.string "description"
@@ -21,4 +31,5 @@ ActiveRecord::Schema.define(version: 2022_04_28_185615) do
     t.datetime "updated_at", precision: 6, null: false
   end
 
+  add_foreign_key "accounts_payables", "categories"
 end
